fix: adjustments on mobile view (fixes #6)

--- a/src/app/components/experience-tabs/style.scss
+++ b/src/app/components/experience-tabs/style.scss
@@ -50,6 +50,7 @@
 
         @media screen and (max-width: 700px) {
             margin: 0;
+            font-size: 1rem;
 
             &:nth-child(1),
             &:nth-last-child(1) {
@@ -83,6 +84,7 @@
             font-size: 1.5rem;
             color: $almond;
             font-weight: 600;
+            margin-bottom: 5px;
         }
 
         &__period {
