--- a/src/app/components/header/style.scss
+++ b/src/app/components/header/style.scss
@@ -20,7 +20,7 @@
             grid-column: span 4;
 
             img {
-                width: 100px;
+                width: 85px;
                 height: auto;
             }
         }
@@ -51,18 +51,6 @@
         display: inline;
         font-size: 1.5rem;
 
-        @media screen and (max-width: 700px) {
-            font-size: 1.25rem;
-
-
-            &.active a {
-
-                &:after {
-                    font-size: 1.75rem;
-                }
-            }
-        }
-
         a {
             color: $black;
             text-decoration: none;
@@ -81,6 +69,18 @@
                 color: $almond;
                 font-size: 2rem;
                 line-height: 0.5rem;
+            }
+        }
+
+        @media screen and (max-width: 700px) {
+            font-size: 1rem;
+
+
+            &.active a {
+
+                &:after {
+                    font-size: 1.5rem;
+                }
             }
         }
     }
