--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -39,8 +39,8 @@ body {
         color: $black;
 
         @media screen and (max-width: 700px) {
-            font-size: 7rem;
-            line-height: 6.5rem;
+            font-size: 6rem;
+            line-height: 5.5rem;
         }
 
         &-highlight {
@@ -193,7 +193,7 @@ body {
             font-weight: normal;
 
             @media screen and (max-width: 700px) {
-                font-size: 4rem;
+                font-size: 3.5rem;
             }
         }
 
@@ -295,7 +295,7 @@ body {
 
             @media screen and (max-width: 700px) {
                 display: flex;
-                margin-top: 28px;
+                margin-top: 32px;
                 flex-flow: column;
 
                 li {
@@ -313,7 +313,7 @@ body {
 
 
                 @media screen and (max-width: 700px) {
-                    font-size: 1.5rem;
+                    font-size: 1.25rem;
                 }
 
                 &:hover {
@@ -356,7 +356,7 @@ body {
                 align-items: center;
 
                 @media screen and (max-width: 700px) {
-                    font-size: 1.5rem;
+                    font-size: 1.25rem;
                 }
 
                 &:hover {
